--- a/css/style.css
+++ b/css/style.css
@@ -556,7 +556,7 @@ footer {
         background-color: rgba(0, 0, 0, 0.007);
     }
     .navbar-collapse {
-        background-color: #353554af;
+        background-color: #353554;
     }
     ul li {
         margin-top: 20px;
